* libgcj2.html: Add <body> and </html> tags. 	* libgcj-platforms.html: Likewise. Remove "Last modified".

--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -1,7 +1,10 @@
 <html>
+
 <head>
 <title>libgcj-2.95 Platform Test Strategy</title>
 </head>
+
+<body>
 
 <h1 align="center">libgcj-2.95 Platform Test Strategy</h1>
 
@@ -228,5 +231,5 @@ mailing list is for patches to the libgcj code
 In particular, compiler patches still have to go through gcc, so
 please don't send them to java-patches.
 
-
-<p><i>Last modified on June 25, 1999.</i>
+</body>
+</html>
