--- a/htdocs/java/libgcj2.html
+++ b/htdocs/java/libgcj2.html
@@ -1,7 +1,10 @@
 <html>
+
 <head>
 <title>The libgcj home page</title>
 </head>
+
+<body>
 
     <h2 align=center>The libgcj home page</h2>
 
@@ -63,3 +66,6 @@
 <hr>
 
     <a href="index.html">Back to main page</a>
+
+</body>
+</html>
