--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: download.html,v 1.11 2000/11/19 02:52:01 gerald Exp $ -->
+<!-- $Id: download.html,v 1.12 2000/12/03 23:35:09 jsm28 Exp $ -->
 </HEAD>
 <BODY>
 
@@ -16,9 +16,9 @@
      link to the FTP site is given directly, encouraging mirror usage.
 -->
 <P>Get the snapshot archive via FTP from
-   <TT>&lt;URL:ftp://gcc.gnu.org/pub/libstdc++/&gt;</TT>.
+   <TT>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</TT>.
    You will almost certainly need to use one of the 
-   <A HREF="http://sources.redhat.com/mirrors.html">mirror sites</A>
+   <A HREF="http://gcc.gnu.org/mirrors.html">mirror sites</A>
    due to the extremely heavy load on the main server.
 </P>
 
