Tweak the descriptions of the gcc and gcc-help lists. By Joe Buck <jbuck@synopsys.COM>.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -21,12 +21,12 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc/">gcc</a></b>
   is a high volume list for general development discussions about GCC.
-  Anything not
+  Anything relevant to the development or testing of GCC and not
   covered by other mailing lists is suitable for discussion here.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a></b>
   is a relatively high volume list for people searching for help in building
-  GCC.
+  or using GCC.
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
