--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: status.html,v 1.8 2000/12/11 22:21:06 pme Exp $ -->
+<!-- $Id: status.html,v 1.9 2001/01/23 16:49:33 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -18,6 +18,12 @@
    <A HREF="http://gcc.gnu.org/mirrors.html">GCC mirror site</A> under the
    snapshots directory as &quot;2001-01-22/gcc[-g++]-20010122.tar.gz&quot;,
    or via CVS using the &quot;gcc_ss_20010122&quot; checkout tag.
+</P>
+
+<P>The most recent version of this library that will build with
+   <A HREF="http://gcc.gnu.org/gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</A>
+   is the ninth snapshot release,
+   <A HREF="download.html">libstdc++-2.90.8.tar.gz</A>.
 </P>
 
 <P>New things that work are in the latest
