Update sparc-sun-solaris* entry.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -555,13 +555,13 @@ broken <i>VPATH</i> mechanism, which means you must either:
 <h3><a name="sparc-sun-solaris*">sparc-sun-solaris*</a></h3>
 
 <p>binutils 2.9.1 has known bugs on this platform. We recommend to use
-the vendor tools (Sun as, Sun ld) until these have been fixed.
-Unfortunately, C++ shared libraries, including libstdc++, won't work
+binutils 2.10 or the vendor tools (Sun as, Sun ld).</p>
+
+<p>Unfortunately, C++ shared libraries, including libstdc++, won't work
 properly if assembled with Sun as: the linker will complain about
 relocations in read-only sections, in the definition of virtual
-tables.  Some possible work-arounds: use some development release of
-binutils, wait for the next stable binutils release or refrain from
-creating C++ shared libraries.</p>
+tables. Also, Sun as fails to process long symbols resulting from
+mangling template-heavy C++ function names.</p>
 
 
 <hr>
