Fix a typo. By Matt Kraai <kraai@alumni.carnegiemellon.edu>.

--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -30,7 +30,7 @@ until a new version of dejagnu has been released.</p>
 
 <li>
 In order to run the libio tests on targets which do not fully
-support Unix/POSIX commands (e.g. Cgwin), the references to the dbz
+support Unix/POSIX commands (e.g. Cygwin), the references to the dbz
 directory have to be deleted from libio/configure.in.
 </li>
 
