--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -120,6 +120,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2001-03">Mar 2001
 <option value="gcc/2001-02">Feb 2001
 <option value="gcc/2001-01">Jan 2001
 <option value="gcc/2000-12">Dec 2000
@@ -164,6 +165,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2001-03">Mar 2001
 <option value="gcc-bugs/2001-02">Feb 2001
 <option value="gcc-bugs/2001-01">Jan 2001
 <option value="gcc-bugs/2000-12">Dec 2000
@@ -208,6 +210,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2001-03">Mar 2001
 <option value="gcc-patches/2001-02">Feb 2001
 <option value="gcc-patches/2001-01">Jan 2001
 <option value="gcc-patches/2000-12">Dec 2000
@@ -244,6 +247,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2001-03">Mar 2001
 <option value="gcc-help/2001-02">Feb 2001
 <option value="gcc-help/2001-01">Jan 2001
 <option value="gcc-help/2000-12">Dec 2000
@@ -265,6 +269,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2001-03">Mar 2001
 <option value="gcc-cvs/2001-02">Feb 2001
 <option value="gcc-cvs/2001-01">Jan 2001
 <option value="gcc-cvs/2000-12">Dec 2000
@@ -301,6 +306,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2001-03">Mar 2001
 <option value="gcc-testresults/2001-02">Feb 2001
 <option value="gcc-testresults/2001-01">Jan 2001
 <option value="gcc-testresults/2000-12">Dec 2000
@@ -350,6 +356,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="gcc-regression/2001-03">Mar 2001
 <option value="gcc-regression/2001-02">Feb 2001
 <option value="gcc-regression/2001-01">Jan 2001
 <option value="gcc-regression/2000-12">Dec 2000
@@ -401,6 +408,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="libstdc++/2001-03">Mar 2001
 <option value="libstdc++/2001-02">Feb 2001
 <option value="libstdc++/2001-01">Jan 2001
 <option value="libstdc++/2000-12">Dec 2000
@@ -456,6 +464,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 </tr>
 <tr align=left>
 <td><select name=restrict multiple size=6>
+<option value="java/2001-03">Mar 2001
 <option value="java/2001-02">Feb 2001
 <option value="java/2001-01">Jan 2001
 <option value="java/2000-12">Dec 2000
