Add a link to a H8 page.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -16,29 +16,33 @@ support them.  If you have any problems installing them, please
 contact their makers.</p>
 
 <ul>
-<li><a href="http://www-frec.bull.com/docs/download.htm">AIX</a>
+<li><a href="http://www-frec.bull.com/docs/download.htm">AIX</a></li>
 
-<li>DOS: <a href="http://www.delorie.com/djgpp/">DJGPP</a>
+<li>DOS: <a href="http://www.delorie.com/djgpp/">DJGPP</a></li>
 
-<li><a href="http://hpux.cae.wisc.edu/">HP-UX Porting Center</a>
+<li><a href="http://hpux.cae.wisc.edu/">HP-UX Porting Center</a></li>
 
 <li><a href="http://www.sco.com/skunkware/devtools/index.html#gcc">SCO
-    OpenServer/Unixware</a>
+    OpenServer/Unixware</a></li>
 
 <li>Solaris (SPARC, Intel): <a
-    href="http://www.sunfreeware.com/">Sunfreeware</a>
+    href="http://www.sunfreeware.com/">Sunfreeware</a></li>
 
-<li>SGI: <a href="http://freeware.sgi.com/">SGI Freeware</a>
+<li>SGI: <a href="http://freeware.sgi.com/">SGI Freeware</a></li>
 
 <li>Windows 95, 98, and NT: 
     <a href="http://sources.redhat.com/cygwin/">Cygwin for Windows 95,
     98, and NT</a> |
     <a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU
-    Win32 related projects</a> by Mumit Khan
+    Win32 related projects</a> by Mumit Khan</li>
 
 <li><a href="ftp://ftp.thewrittenword.com/packages/free/by-name/gcc-2.95.2/">The
 Written Word</a> offers binaries for Solaris 2.5.1, 2.6, 2.7/SPARC, 2.7/Intel,
-IRIX 6.2, 6.5, Digital UNIX 4.0D, HP-UX 10.20, and HP-UX 11.00.
+IRIX 6.2, 6.5, Digital UNIX 4.0D, HP-UX 10.20, and HP-UX 11.00.</li>
+
+<li>Hitachi H8/300[HS]: <a
+href="http://www.hdl.co.jp/~kban/h8300-hms/">GNU Development Tools for
+the Hitachi H8/300[HS] Series</a></li>
 
 </ul>
 
