Update estimated release date for GCC 3.0.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,7 +138,7 @@ maintain and improve quality.
 and we are currently working on GCC 2.95.3, a maintainance update.
 <a href="gcc-2.96.html">GCC 2.96</A> and 2.97 are development snapshots
 leading towards <a href="gcc-3.0/criteria.html">GCC 3.0</A> which we
-hope to release by the end of Q1 2001.
+hope to release in the first half of 2001.
 </p>
 
 <hr>
