Add </li> appropriately.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -17,29 +17,29 @@
 <ul>
   <li><b><a href="http://gcc.gnu.org/ml/gcc-announce/">gcc-announce</a></b>
   is a read-only low volume list where
-  we post announcements about releases or other important events.
+  we post announcements about releases or other important events.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc/">gcc</a></b>
   is a high volume list for general development discussions about GCC.
   Anything relevant to the development or testing of GCC and not
-  covered by other mailing lists is suitable for discussion here.
+  covered by other mailing lists is suitable for discussion here.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-help/">gcc-help</a></b>
   is a relatively high volume list for people searching for help in building
-  or using GCC.
+  or using GCC.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-bugs/">gcc-bugs</a></b>
   is a relatively high volume list for bug reports and general discussion
-  about bugs in GCC.
+  about bugs in GCC.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
   particular patches.  All patch submissions and all discussion for a
-  particular patch should be sent to this list.
+  particular patch should be sent to this list.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
   gcc-testresults</a></b> is a moderate volume list where test results for
-  the GCC compilers are posted.
+  the GCC compilers are posted.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/libstdc++/">libstdc++</a></b>
   is the main discussion and development list for the standard C++
@@ -66,11 +66,11 @@
 <ul>
   <li><b><a href="http://gcc.gnu.org/ml/gcc-prs/">gcc-prs</a></b>
   is a read-only, relatively high volume list which tracks problem reports
-  as they are entered into our GNATS database.
+  as they are entered into our GNATS database.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
-  GCC CVS repository.
+  GCC CVS repository.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/libstdc++-cvs/">libstdc++-cvs</a></b>
   is a read-only, relatively low volume list which tracks checkins to
@@ -79,11 +79,11 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-cvs-wwwdocs/">gcc-cvs-wwwdocs</a></b>
   is a read-only, relatively low volume list which tracks checkins to
-  the GCC webpages CVS repository.
+  the GCC webpages CVS repository.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">
   gcc-regression</a></b> is a read-only moderate volume list where regression
-  results for the GCC compilers are posted.
+  results for the GCC compilers are posted.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/java-prs/">java-prs</a></b>
   is a read-only list which tracks Java-related problem reports as
