--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -23,9 +23,9 @@ of our current development sources on a regular base:</p>
 <li><a href="http://www.netwinder.org/build/gcc.html">
     armv3l-unknown-linux-gnu, armv4l-unknown-linux-gnu, and
     i386-unknown-linux-gnu</a> by 
-    <a href="http://www.rebel.com">Rebel.com</a>
+    <a href="http://www.rebel.com">Rebel.com</a></li>
 <li><a href="http://www.codesourcery.com/gcc-snapshots.html">i686-pc-linux-gnu</a>
-    by CodeSourcery.
+    by CodeSourcery.</li>
 </ul>
 
 </body>
