--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -181,22 +181,22 @@ contributors.</p>
 
 <p>If you find a bug, but you are not fixing it (yet):</p>
 <ol>
-<li>Create a (minimal) test-case.
-<li>Add the test-case to our test-suite, marking it as XFAIL.
-<li>Add a bug report referencing the test-case to GNATS.
+<li>Create a (minimal) test-case.</li>
+<li>Add the test-case to our test-suite, marking it as XFAIL.</li>
+<li>Add a bug report referencing the test-case to GNATS.</li>
 </ol>
 
 <p>If you fix a bug for which there is already a GNATS entry:</p>
 <ol>
-<li>Remove the XFAIL on the test-case.
-<li>Close the bug report in GNATS.
+<li>Remove the XFAIL on the test-case.</li>
+<li>Close the bug report in GNATS.</li>
 </ol>
 
 <p>If you find a bug, and you are fixing it right then:</p>
 <ol>
-<li>Create a (minimal) test-case.
-<li>Add the test-case to our test-suite, marking it as PASS.
-<li>Check in your fixes.
+<li>Create a (minimal) test-case.</li>
+<li>Add the test-case to our test-suite, marking it as PASS.</li>
+<li>Check in your fixes.</li>
 </ol>
 
 
