--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -22,20 +22,20 @@ At the moment the steering committee has 14 members. The best place to
 reach them is the gcc <a href="lists.html">mailinglist</a>.
 
 <ul>
-<li>Per Bothner (independent consultant)
-<li>Joe Buck (Synopsys)
-<li>David Edelsohn (IBM)
-<li>Kaveh R. Ghazi
-<li>Torbjorn Granlund (Swox AB)
-<li>Jeffrey A. Law (Red Hat)
-<li>Marc Lehmann (Technische Universität Karlsruhe)
-<li>Jason Merrill (Red Hat)
-<li>David Miller (Red Hat)
-<li>Mark Mitchell (CodeSourcery)
-<li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)
-<li>Gerald Pfeifer (Vienna University of Technology)
-<li>Joel Sherrill (OAR Corporation)
-<li>Jim Wilson (Red Hat)
+<li>Per Bothner (independent consultant)</li>
+<li>Joe Buck (Synopsys)</li>
+<li>David Edelsohn (IBM)</li>
+<li>Kaveh R. Ghazi</li>
+<li>Torbjorn Granlund (Swox AB)</li>
+<li>Jeffrey A. Law (Red Hat)</li>
+<li>Marc Lehmann (Technische Universität Karlsruhe)</li>
+<li>Jason Merrill (Red Hat)</li>
+<li>David Miller (Red Hat)</li>
+<li>Mark Mitchell (CodeSourcery)</li>
+<li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)</li>
+<li>Gerald Pfeifer (Vienna University of Technology)</li>
+<li>Joel Sherrill (OAR Corporation)</li>
+<li>Jim Wilson (Red Hat)</li>
 </ul>
 
 <p><small>Membership in the steering committee is a personal membership.
