--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -102,22 +102,23 @@ particular releases or snapshots or the latest snapshot.  Other tags/branches
 you may want to check out include:
 
 <ul>
-  <li> gcc_latest_snapshot
-  <li> gcc_ss_yyyymmdd
-  <li> gcc-2_95_2-release
-  <li> gcc-2_95_1-release
-  <li> gcc-2_95-release
-  <li> gcc-2_95-branch
-  <li> egcs_1_1_2_release
-  <li> egcs_1_1_1_release
-  <li> egcs_1_1_release
-  <li> egcs_1_1_branch
-  <li> egcs_1_0_3_release
-  <li> egcs_1_0_2_release
-  <li> egcs_1_0_1_release
-  <li> egcs_1_0_release
-  <li> egcs_ss_yyyymmdd	For snapshots prior to 19990913
-  <li> gnu-win32-b20-branch
+  <li>gcc_latest_snapshot</li>
+  <li>gcc_ss_yyyymmdd</li>
+  <li>gcc-3_0-branch</li>
+  <li>gcc-2_95_2-release</li>
+  <li>gcc-2_95_1-release</li>
+  <li>gcc-2_95-release</li>
+  <li>gcc-2_95-branch</li>
+  <li>egcs_1_1_2_release</li>
+  <li>egcs_1_1_1_release</li>
+  <li>egcs_1_1_release</li>
+  <li>egcs_1_1_branch</li>
+  <li>egcs_1_0_3_release</li>
+  <li>egcs_1_0_2_release</li>
+  <li>egcs_1_0_1_release</li>
+  <li>egcs_1_0_release</li>
+  <li>egcs_ss_yyyymmdd	For snapshots prior to 19990913</li>
+  <li>gnu-win32-b20-branch</li>
 </ul>
 
 
