* index.html: Add note about GCC 3.0 snapshots being available. 	Add "Home Page" to <title>. Move pre-January news items to... 	* old-news.html: ...here.

--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -6,6 +6,21 @@
 
 <table>
 <tr><td valign="top">
+<b>December 20, 2000</b>
+</td><td>
+The Java Gnats database has been merged into the gcc Gnats database.
+The old database continues to exist but only for reference purposes;
+it is now read-only.
+</td></tr>
+
+<tr><td valign="top">
+<b>December 9, 2000</b>
+</td><td>
+Thanks to Richard Henderson's recent <code>libffi</code> changes, the 
+<code>libgcj</code> bytecode interpreter is now enabled for Alpha systems.
+</td></tr>
+
+<tr><td valign="top">
 <b>December 9, 2000</b>
 </td><td>
 The libgcj sources have <A HREF="/ml/java/2000-12/msg00102.html">
