--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -1,10 +1,10 @@
 <html>
-<title>GCJ: The GNU Compiler for Java</title>
+<title>GCJ: The GNU Compiler for Java: Home Page</title>
 <body bgcolor="white">
 
 <GCJNAV>
 
-<br><br>
+<br>
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>tm</small></a></sup> Programming Language</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -14,6 +14,7 @@
  </th>
 </tr>
 </table>
+<br>
 GCJ is a portable, optimizing, ahead-of-time compiler for the Java
 Programming Language.  It can compile:
 <ul>
@@ -49,8 +50,9 @@ cross-compiler, suitable for embedded systems programming.
 
 <p>
 
-GCJ is part of the GNU Compiler Collection (<A HREF="../">GCC</A>). GCC, gdb and related tools are <a
-href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
+GCJ is part of the GNU Compiler Collection (<A HREF="../">GCC</A>). GCC, 
+GDB and related tools are 
+<a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
 <br>
 <br>
 
@@ -63,6 +65,17 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 </table>
 
 <table>
+<tr><td valign="top">
+<b>March 7, 2001</b>
+</td><td>
+The first snapshot from the code branch that will become GCC 3.0 is 
+<A HREF="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">
+now available</A>. Snapshots from this branch will be made weekly. These
+include everything you need to build and run GCJ, and should be much
+more stable than the main development tree -- so try them out and help us
+find bugs!
+</td></tr>
+
 <tr><td valign="top">
 <b>February 8, 2001</b>
 </td><td>
@@ -87,22 +100,8 @@ is now fully merged into GCC.
 <tr><td valign="top">
 <b>January 17, 2001</b>
 </td><td>
-GCJ is now compatible with the V3 C++ ABI, thanks to the efforts of Alexandre Petit-Bianco.
-</td></tr>
-
-<tr><td valign="top">
-<b>December 20, 2000</b>
-</td><td>
-The Java Gnats database has been merged into the gcc Gnats database.
-The old database continues to exist but only for reference purposes;
-it is now read-only.
-</td></tr>
-
-<tr><td valign="top">
-<b>December 9, 2000</b>
-</td><td>
-Thanks to Richard Henderson's recent <code>libffi</code> changes, the 
-<code>libgcj</code> bytecode interpreter is now enabled for Alpha systems.
+GCJ is now compatible with the V3 C++ ABI, thanks to the efforts of 
+Alexandre Petit-Bianco.
 </td></tr>
 
 <tr><td valign="top">
