--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -20,9 +20,7 @@ downloaded the "core" compiler plus any front ends, you do not have the
 testsuites.</p>
 
 <p>Second, you must have a current version of dejagnu installed;
-dejagnu 1.3 is not sufficient.  We have made dejagnu snapshots available at
-<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure">ftp://gcc.gnu.org/pub/gcc/infrastructure</a>
-until a new version of dejagnu has been released.</p>
+dejagnu 1.3 is not sufficient.</p>
 
 <p>Now you may need specific preparations:</p>
 
