Add a mention of anonymous rsync copies of the repositories, plus some cvsup blurb, if people are motivated to build new mirrors.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -71,6 +71,8 @@
 <A HREF="frontends.html">Front-ends</A><BR>
 <A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
+<A HREF="rsync.html">Rsync read access</A><BR>
+<A HREF="cvsup.html">CVSup mirrors</A><BR>
 <A HREF="cvswrite.html">CVS write access</A><BR>
 <A HREF="gnatswrite.html">GNATS write access</A><BR>
 </P>
