--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -10,7 +10,10 @@
 
 <p>These sites mirror the GCC ftp directory directly.  The official
 gcc.gnu.org server is in California in the US.  Please let us know
-if you are mirroring the GCC pages so we can note it here!
+if you are mirroring the GCC pages so we can note it here!</p>
+
+<p>If you want to mirror the whole GCC CVS repository, ask about 
+<a href="cvsup.html">CVSup access</a>.</p>
 
 <ul>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a>
