Add documentation for XPASS. Add missing </li>s.

--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -94,12 +94,13 @@ results, the *.sum files summarize the results. These summaries list
 all the tests that have been run with a corresponding status code:</p>
 
 <ul>
-<li>PASS: the test passed as expected
-<li>FAIL: the test unexpectedly failed
-<li>XFAIL: the test failed as expected
-<li>UNSUPPORTED: the test is not supported on this platform
-<li>ERROR: the testsuite detected an error
-<li>WARNING: the testsuite detected a possible problem
+<li>PASS: the test passed as expected</li>
+<li>XPASS: the test unexpectedly passed</li>
+<li>FAIL: the test unexpectedly failed</li>
+<li>XFAIL: the test failed as expected</li>
+<li>UNSUPPORTED: the test is not supported on this platform</li>
+<li>ERROR: the testsuite detected an error</li>
+<li>WARNING: the testsuite detected a possible problem</li>
 </ul>
 
 <p> It is normal for some tests to report
