Markup fixes. By Wolfgang Bangerth <wolfgang.bangerth@iwr.uni-heidelberg.de>.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -334,13 +334,13 @@ tools by adding <code>udk-</code> before the commonly known name.  For example, 
 newer is recommended to build on this platform.</p>
 
 <p>Errors involving &quot;alloca&quot; when building GCC generally are due
-to an incorrect definition of <tt>CC</tt> in the Makefile or mixing files
+to an incorrect definition of <code>CC</code> in the Makefile or mixing files
 compiled with the native C compiler and GCC.  During the stage1 phase of
 the build, the native AIX compiler <b>must</b> be invoked as &quot;cc&quot;
-(not &quot;xlc&quot;).  Once <tt>configure</tt> has been informed of
+(not &quot;xlc&quot;).  Once <code>configure</code> has been informed of
 &quot;xlc&quot;, one needs to use &quot;make distclean&quot; to remove the
-configure cache files and ensure that <tt>$CC</tt> environment variable
-does not provide a definition that will confuse <tt>configure</tt>.
+configure cache files and ensure that <code>$CC</code> environment variable
+does not provide a definition that will confuse <code>configure</code>.
 If this error occurs during stage2 or later, then the problem most likely
 is the version of Make (see above).</p>
 
@@ -362,10 +362,10 @@ with GCC.</p>
 AIX 4.3.1 to parse archive libraries did not handle the new format correctly.
 These routines are used by GCC and result in error messages during linking
 such as &quot;not a COFF file&quot;.  The version of the routines shipped
-with AIX 4.3.1 should work for a 32-bit environment.  The <tt>-g</tt> option
-of the archive command may be used to create archives of 32-bit objects
-using the original "small format".  A correct version of the routines is
-shipped with AIX 4.3.2.</p>
+with AIX 4.3.1 should work for a 32-bit environment.  The
+<code>-g</code> option of the archive command may be used to create
+archives of 32-bit objects using the original "small format". A
+correct version of the routines is shipped with AIX 4.3.2.</p>
 
 <p>The initial assembler shipped with AIX 4.3.0 generates incorrect object
 files.  A fix for APAR IX74254 (64BIT DISASSEMBLED OUTPUT FROM COMPILER FAILS
