Update 2.95.3 release docs

--- a/htdocs/gcc-2.95/gcc-2.95.3.html
+++ b/htdocs/gcc-2.95/gcc-2.95.3.html
@@ -7,10 +7,10 @@
 <body>
 <h1 align="center">GCC 2.95.3</h1>
 
-<p>January 11, 2001
+<p>March 16, 2001
 
 <p>The GNU project and the GCC developers are pleased to announce the
-prerelease of GCC version 2.95.3.  GCC used to stand for the GNU C Compiler, but
+release of GCC version 2.95.3.  GCC used to stand for the GNU C Compiler, but
 since the compiler supports several other languages aside from C, it now stands
 for the GNU Compiler Collection.
 
@@ -25,7 +25,6 @@ for the GNU Compiler Collection.
 	    register reloading code.
 	<li>Fix numerous problems that caused incorrect optimization in the
 	    loop optimizer.
-	<li>Fix setjmp/longjmp based exception handling.
 	<li>Fix aborts in the functions build_insn_chain and scan_loops
 	    under some circumstances.
 	<li>Fix an alias analysis bug.
