Markup fixes, plus some blank lines for easier (human) parsing of the sources.

--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -1,6 +1,10 @@
 <html>
+
+<head>
 <title>GCJ - Less Recent News</title>
-<body bgcolor="white">
+</head>
+
+<body>
 
 <h1>GCJ - Less Recent News</h1>
 
