Add a link to and fix the spelling of DejaGnu.

--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -19,8 +19,9 @@ testsuites</a>. The full distribution contains testsuites; only if you
 downloaded the "core" compiler plus any front ends, you do not have the
 testsuites.</p>
 
-<p>Second, you must have a current version of dejagnu installed;
-dejagnu 1.3 is not sufficient.</p>
+<p>Second, you must have a
+<a href="http://www.gnu.org/software/dejagnu/">current version of
+DejaGnu</a> installed; DejaGnu 1.3 is not sufficient.</p>
 
 <p>Now you may need specific preparations:</p>
 
@@ -34,7 +35,7 @@ directory have to be deleted from libio/configure.in.
 
 <li>
 <p>The following environment variables must be set appropriately, as in
-the following example (which assumes that dejagnu has been installed under
+the following example (which assumes that DejaGnu has been installed under
 /usr/local):</p>
 
 <blockquote><code>
@@ -44,7 +45,7 @@ DEJAGNULIBS = /usr/local/share/dejagnu
 
 <p>On systems such as Cygwin, these paths are required to be actual
 paths, not mounts or links; presumably this is due to some lack of
-portability in the dejagnu code.</p>
+portability in the DejaGnu code.</p>
 </li>
 </ul>
 
