--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -11,10 +11,37 @@
 <h2>Latest releases</h2>
 
 <p>These are manuals for the latest full releases.</p>
+<!-- We don't link to the internals manuals for releases; people
+     caring about internals should really be using the mainline
+     versions.  -->
 
 <ul>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/gcc_toc.html">GCC
-       2.95.2 Manual</a></li>
+  <li>GCC 2.95.3 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/gcc.html">GCC
+         2.95.3 Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/g77.html">G77
+         0.5.25 (GCC 2.95.3) Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/cpp.html">GCC
+         2.95.3 CPP Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/chill.html">GCC
+         2.95.3 Chill Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.3/objc-features.html">GCC
+         2.95.3 ObjC Features</a></li>
+  </ul></li>
+  <li>GCC 2.95.2 manuals:
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/gcc.html">GCC
+         2.95.2 Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/g77.html">G77
+         0.5.25 (GCC 2.95.2) Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/cpp.html">GCC
+         2.95.2 CPP Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/chill.html">GCC
+         2.95.2 Chill Manual</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc-2.95.2/objc-features.html">GCC
+         2.95.2 ObjC Features</a></li>
+  </ul></li>
 </ul>
 
 
@@ -26,22 +53,26 @@ existing release.</p>
 
 <ul>
   <li><a href="../install/index.html">GCC Installation Instructions</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcc_toc.html">GCC Manual</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/g77_toc.html">G77 Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcc.html">GCC Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/g77.html">G77 Manual</a></li>
   <ul> 
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a></li>
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a></li>
   </ul>
-  <li><a href="http://gcc.gnu.org/onlinedocs/c-tree_toc.html">Tree
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcj.html">GCJ Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/c-tree.html">Tree
        Representation Internals</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gxxint_toc.html">G++ Internals
+  <li><a href="http://gcc.gnu.org/onlinedocs/gxxint.html">G++ Internals
        Manual</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/cpp_toc.html">CPP Manual</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcov_toc.html">GCOV Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/cpp.html">CPP Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/cppinternals.html">CPP
+       Internals Manual</a></li>
   <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/chill_toc.html">Chill
+  <li><a href="http://gcc.gnu.org/onlinedocs/porting.html">libstdc++-v3
+       Porting Manual</a></li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/chill.html">Chill
       Manual</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/objc-features_toc.html">ObjC
+  <li><a href="http://gcc.gnu.org/onlinedocs/objc-features.html">ObjC
       Features</a></li>
 </ul>
 
