--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -69,18 +69,9 @@ projects</a>.
 <br>
 
   <p>Before we can accept code contributions from you, we need a
-  copyright assignment form filled out.
-
-  <ul>
-   <li>If you've developed some addition or patch to libgcj
-   that you would like to contribute, you should fill out a <a
-   href="libgcj-assign.txt">copyright assignment
-   form</a> and send it in to us.  We are unable to use code from
-   you until this is on-file.
-
-   <li>Small changes can be accepted without a copyright assignment form
-   on file.
-  </ul>
+  copyright assignment form filled out.  See <a
+  href="/contribute.html">the gcc contribute page</a>for information
+  on how to do this.</p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
