Add more information on --enable-shared and --disable-shared. By Wolfgang Bangerth <wolfgang.bangerth@iwr.uni-heidelberg.de>.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -77,7 +77,10 @@ GCC.  A partial list of supported <tt>options</tt>:
   </li>
 
   <li> <code>--enable-shared</code> -- Build shared versions of the C++ runtime
-  libraries if supported. <code>--disable-shared</code> is the default.</li>
+  libraries if supported. This is the default on most systems. Use
+  <code>--disable-shared</code> for static libraries. Note that up to
+  the gcc version 2.95.x series, static libraries were the default on
+  all systems.</li>
 
   <li> <code>--with-gnu-as</code> -- Specify that the compiler should
   assume that the assembler it finds is the GNU assembler. However,
