--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -31,6 +31,7 @@ number is maintained.</p>
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
 
+<tr><td><a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a></td><td>2.95.3</td> <td>March 16, 2001</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a></td><td>2.95.2</td> <td>October 24, 1999</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1</a></td><td>2.95.1</td> <td>August 19, 1999</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.html">GCC 2.95</a></td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
