--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -39,6 +39,7 @@ GNU Compiler Collection on your machine.</p>
   <li><a href="#sparc64-*-*">sparc64-*-*</a></li>
   <li><a href="#windows">Microsoft Windows</a></li>
   <li><a href="#os2">OS/2</a></li>
+  <li><a href="#older">Older systems</a></li>
 </ul>
 
 <ul>
@@ -672,6 +673,47 @@ at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.</p>
 <a href="ftp://ftp.leo.org/pub/comp/os/os2/leo/devtools/emx+gcc/">
 ftp://ftp.leo.org/pub/comp/os/os2/leo/devtools/emx+gcc/</a>.</p>
 
+<hr>
+<h3><a name="older"></a>Older systems</h3>
+
+<p>GCC contains support files for many older (1980s and early
+1990s) Unix variants.  For the most part, support for these systems
+has not been deliberately removed, but it has not been maintained for
+several years and may suffer from bitrot.  Support from some systems
+has been removed from GCC 3: fx80, ns32-ns-genix, pyramid, tahoe,
+gmicro, spur; most of these targets had not been updated since GCC
+version 1.</p>
+
+<p>Support for older systems as targets for cross-compilation is less
+problematic than support for them as hosts for GCC; if an
+enthusiast wishes to make such a target work again
+(including resurrecting any of the targets that never worked with GCC
+2, starting from the last CVS version before they were removed),
+patches <a href="../contribute.html">following the usual
+requirements</a> would be likely to be accepted, since they should not
+affect the support for more modern targets.</p>
+
+<p>Support for old systems as hosts for GCC can cause problems if the
+workarounds for compiler, library and operating system bugs affect the
+cleanliness or maintainability of the rest of GCC.  In some cases, to
+bring GCC up on such a system, if still possible with current GCC, may
+require first installing an old version of GCC which did work on that
+system, and using it to compile a more recent GCC, to avoid bugs in
+the vendor compiler.  Old releases of GCC 1 and GCC 2 are available in
+the old-releases directory on the <a href="../mirrors.html">GCC mirror
+sites</a>.  Header bugs may generally be avoided using
+<code>fixincludes</code>, but bugs or deficiencies in libraries and
+the operating system may still cause problems.</p>
+
+<p>For some systems, old versions of GNU binutils may also be useful,
+and are available from pub/binutils/old-releases on <a
+href="http://sources.redhat.com/mirrors.html">sources.redhat.com
+mirror sites</a>.</p>
+
+<p>Some of the information on specific systems above relates to
+such older systems, but much of the information
+about GCC on such systems (which may no longer be applicable to
+current GCC) is to be found in the GCC texinfo manual.</p>
 
 <hr>
 <h3><a name="elf_targets">all ELF targets (SVR4, Solaris, etc.)</a></h3>
