Add missing second reference to GCC 2.95.3.

--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -53,6 +53,7 @@ Numbers in parentheses are EGCS release numbers. </p>
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>GCC Version</th><th>Release date</th></tr>
 
+<tr><td>2.95.3</td> <td>March 16, 2001</td></tr>
 <tr><td>2.95.2</td> <td>October 24, 1999</td></tr>
 <tr><td>2.95.1</td> <td>August 19, 1999</td></tr>
 <tr><td>2.95</td>   <td>July 31, 1999</td></tr>
