2001-03-21  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* contrib.html (Checkings and Gnats): `java' replaces `gcj'.

(http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01584.html)

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -135,7 +135,7 @@ projects</a>.
       message the same as the ChangeLog entry.
 
     <p>If your change fixes a PR, put the text (e.g.)
-      ``<tt>Fixes PR gcj/58</tt>'' into the ChangeLog entry and into the
+      ``<tt>Fixes PR java/58</tt>'' into the ChangeLog entry and into the
       cvs commit message.  This will cause an automatic message to be
       sent to Gnats to record the commit in the PR.
 
