tiny fixes like </p>

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -29,7 +29,7 @@ port</a></h2>
 <p>This is a port of GCC, GDB and the Binutils for Motorola 68HC11
 (later 68HC12). This port supports 8,16,32 and 64-bits integers
 as well as 32 and 64-bits floats. It uses ELF32 for object files and
-DWARF-2 for debugging information.
+DWARF-2 for debugging information.</p>
 
 <h2><a name="sun-make"></a><a href="ftp://ftp.axis.se/pub/users/hp/gcc/gcc-2.95.1-sun-make-patch1.txt">Patch
 to build elsewhere than in the source directory using Sun make</a></h2>
@@ -55,7 +55,7 @@ provide a variety of C++ programming tools and other support to
 GNU C++ programmers.  It has been available for quite some time
 now, and, although it has been superseded by <code>libstdc++</code>,
 it is still providing some useful services. And, it has proven to
-be a good testsuite for the compiler...
+be a good testsuite for the compiler...</p>
 
 <h2>
 Bounds checking patches for
