Update URL for PDP-11 simulator.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -214,7 +214,7 @@ tahoe. These are listed here just for completeness.
  <li>pdp11
   <br>Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
   <br><a href="http://www.village.org/pdp11/faq.html">PDP-11 FAQ</a>
-  <br><a href="ftp://ftp.digital.com/pub/DEC/sim/">Simulators</a>
+  <br><a href="http://www.tiac.net/users/mps/retro/">Simulators</a>
 
  <li>pj (picoJava)
   <br>Manufacturer: <a href="http://www.sun.com/">Sun</a>
