* faq.html: Fix markup. 	* merge-status.html: Ditto.

--- a/htdocs/java/merge-status.html
+++ b/htdocs/java/merge-status.html
@@ -1,9 +1,11 @@
 <html>
+
 <head>
 <title>Classpath / libgcj merge status</title>
 </head>
 
-<body bgcolor="#ffffff">
+<body>
+
 <h1>Classpath / libgcj merge status</h1>
 
 <table border=1 width="100%">
